# Game-Engine-Prototype-Cpp

./: CMakeLists.txt
src/: gameobject.cpp  gamestrategy.cpp  graphicscontext.cpp  ironlotus.h  main.cpp  player.cpp  scene.cpp  sprite.cpp  surfaceloader.cpp  town.cpp
